fixtures/errors/no_label_char_dir.s
.name "No label char after direct"
.comment "no label char after direct"

hi:
	sti r1, %hi, %1
